# AWS-Security-Audit-Tool

./: .env.example  .gitignore  PROJECT_DOCUMENTATION.md  README.md  pyproject.toml  requirements-dev.txt
dashboard/: index.html  package-lock.json  package.json
dashboard/src/: App.jsx  App.module.css  index.css  sampleData.js
reporting/: html_reporter.py  json_reporter.py
scanner/: __init__.py  config.py  lambda_handler.py  main.py  scanner.py
scanner/checks/: __init__.py  base.py  cloudtrail_root_usage.py  ec2_security_groups.py  iam_checks.py  s3_public_buckets.py
scanner/utils/: aws_session.py  logger.py
terraform/: main.tf  out.json  outputs.tf  resources.tf  variables.tf
tests/: __init__.py  test_iam_check.py  test_s3_check.py
